fixed spacing problem

--- a/web-based/resources/css/app.css
+++ b/web-based/resources/css/app.css
@@ -1,13 +1,3 @@
 @import 'tailwindcss';
 
 @tailwind utilities;
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins';
-}
-
-/* h1{
-    margin-left: 100px;
-} */
